updated favicon, logo, fixed nav menu shift

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -11029,7 +11029,8 @@ body {
   }
   #mainNav .nav-link {
     transition: none;
-    padding: 2rem 1.5rem;
+    /*padding: 2rem 1.5rem;*/
+    padding: 1.5rem 1.5rem 1.25rem;
     color: rgba(255, 255, 255, 0.5);
   }
   #mainNav .nav-link:hover {
@@ -11046,8 +11047,8 @@ body {
   }
   #mainNav.navbar-shrink .nav-link {
     color: #000;
-    padding: 1.5rem 1.5rem 1.25rem;
-    border-bottom: 0.25rem solid transparent;
+    /*padding: 1.5rem 1.5rem 1.25rem;*/
+    /*border-bottom: 0.25rem solid transparent;*/
   }
   #mainNav.navbar-shrink .nav-link:hover {
     color: #64a19d;
