--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,12 @@ h2, .h2 {
 
 }
 
+#mainNav .navbar-brand img {
+    height: 40px; /* Controls height */
+    
+}
+  
+  
 
   
 
